--- a/templates/index.html
+++ b/templates/index.html
@@ -119,5 +119,23 @@ function deleteChunk(chunkId) {
             });
     }
 }
+
+function clearNamespace() {
+    if (confirm('Are you sure you want to delete ALL chunks from this namespace and local storage? This action cannot be undone.')) {
+        axios.post('/api/clear_namespace')
+            .then(response => {
+                if (response.data.success) {
+                    alert(response.data.message);
+                    location.reload();
+                } else {
+                    alert('Error clearing namespace: ' + response.data.message);
+                }
+            })
+            .catch(error => {
+                console.error('Error:', error);
+                alert('Error clearing namespace');
+            });
+    }
+}
 </script>
 {% endblock %} 
